# Paddle-examples-for-AVH

./: README.md
BaseProject/: .clangd  base_project.cproject.yml  base_project.csolution.yml  base_project.uvoptx  base_project.uvprojx  main.c  packs.txt  run.sh  vcpkg-configuration.json
Clas-example/: README_ch.md  run_demo.sh
Clas-example/image/: README.md
Class/MobileNetV3_small_x0_35/: Makefile  configure_avh.sh  convert_label.py  corstone310.ld  run_demo.sh
Class/PPLCNet/: Makefile  corstone310.ld  run_demo.sh
Class/Text-angle-classification-example/: Makefile  configure_avh.sh  run_demo.sh
Classification-example/ResNet50_vd_FP32/: README.md  convert_image.py  convert_label.py  run_demo.sh
OCR-example/: README.md
OCR-example/Text-angle-classification-example/: README.md  README_CN.md  convert_image.py  run_demo.sh
OCR-example/Text-recognition-example/: convert_image.py
OCR-example/Text-recognition-example-m85/: Makefile  README.md  corstone310.ld  run_demo.sh
OCR-example/direction_classifier/: README.md  README_CN.md  convert_image.py  run_demo.sh
OCR-example/imgs_words_en/: README.md
Object-Classification-example/MobileNetV3_small_x0_35/: README.md  convert_image.py  convert_label.py  run_demo.sh
Object-Classification-example/PP-LCNet/: .cproject  .project  README.md
Object-Detection-example/: convert_image.py
Object-Segmentation-example/MobileNetV1_x0_25_Quantized/: corstone310.ld  run_demo.sh
PP-LCNet/: convert_image.py
PP-LCNet/labels/: convert_labels.py
PP-LCNet/src/: demo_bare_metal.c
Semantic-Segmentation-example/PP-LiteSeg/: README.md  convert_outputs.py  run_demo.sh
Text-angle-classification-example/src/: demo_bare_metal.c
Text-recognition-example/: requirements.txt
cmake/: arm-none-eabi-gcc.cmake  cmsis.cmake  core_platform.cmake  tvm.cmake
object_classfication_example/: CMakeLists.txt  convert_image.py  convert_labels.py  corstone-300.ld  corstone-310.ld  run_MobileNetV3_small_x0_35.sh  run_PP-LCNet_x0_25_infer.sh  run_ShuffleNetV2_x0_25.sh  temp_txt
object_classfication_example/labels/: README.md
object_classfication_example/src/: main.c.in
object_classification/: .clangd  README.md  convert_image.py  convert_labels.py  main.c  object_classification+MobileNetV3.cbuild.yml  object_classification+MobileNetV3.cprj  object_classification+MobileNetV3M55.cbuild.yml  object_classification+MobileNetV3M55.cprj  object_classification+MobileNetV3M85.cbuild.yml  object_classification+MobileNetV3M85.cprj  object_classification+PPLCNet.cbuild.yml  object_classification+PPLCNet.cprj  object_classification+PPLCNetM55.cbuild.yml  object_classification+PPLCNetM55.cprj  object_classification+PPLCNetM85.cbuild.yml  object_classification+PPLCNetM85.cprj  object_classification+PaddleClasM55.cbuild.yml  object_classification+PaddleClasM55.cprj  object_classification+PaddleClasM85.cbuild.yml  object_classification+PaddleClasM85.cprj  object_classification.cbuild-idx.yml  object_classification.cbuild-pack.yml  object_classification.cproject.yml  object_classification.csolution.yml  object_classification.uvoptx  object_classification.uvprojx  paddle_infer_shape.py  rename_onnx_model.py  run.sh  run_MobileNetV3.sh  run_PP_LCNet.sh  run_demo.sh
object_classification/MobileNetV3_small_x0_35_ssld_infer/: main.c
object_classification/image/: README.md
object_classification/imgs/: README.md
object_classification/include/: crt_config.h
object_classification/labels/: README.md
object_classification/sct/: VHT_Corstone_SSE-310.sct
object_detection/: convert_image.py  main.c  object_classification.uvprojx  object_detection+PicodetM55.cbuild.yml  object_detection+PicodetM55.cprj  object_detection+PicodetM85.cbuild.yml  object_detection+PicodetM85.cprj  object_detection.cbuild-idx.yml  object_detection.cproject.yml  object_detection.csolution.yml  object_detection.uvprojx  run_demo.sh
object_detection/det/: metadata.json
object_detection/include/: inputs.h  outputs.h  tvm_runtime.h
object_detection/tmp/object_detection/PicodetM55/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
object_detection_example/: CMakeLists.txt  README.md  convert_image.py  run_picodet.sh
object_detection_example/images/: README.md
object_detection_example/src/: main.c.in
object_segmentation/: .clangd  convert_image.py  convert_outputs.py  main.c  object_segmentation+PPHumanSegM55.cbuild.yml  object_segmentation+PPHumanSegM55.cprj  object_segmentation+PPHumanSegM85.cbuild.yml  object_segmentation+PPHumanSegM85.cprj  object_segmentation.cbuild-idx.yml  object_segmentation.cproject.yml  object_segmentation.csolution.yml  object_segmentation.uvguix.zheng  object_segmentation.uvoptx  object_segmentation.uvprojx  paddle_infer_shape.py  run_demo.sh
object_segmentation/images/: README.md
object_segmentation/include/: inputs.h  outputs.h
object_segmentation/object_segmentation/: metadata.json
ocr/Text-recognition-example/: convert_image.py
ocr/text_angle_classification/: convert_image.py  main.c  run_demo.sh  text_angle_classification+CHPPOCRV2CLSM55.cbuild.yml  text_angle_classification+CHPPOCRV2CLSM55.cprj  text_angle_classification+CHPPOCRV2CLSM85.cprj  text_angle_classification.cbuild-idx.yml  text_angle_classification.cbuild-pack.yml  text_angle_classification.cproject.yml  text_angle_classification.csolution.yml  text_angle_classification.uvoptx  text_angle_classification.uvprojx
ocr/text_recognition/: convert_image.py  main.c  run_demo.sh  run_demo_old.sh  text_angle_classification+CHPPOCRV2CLSM85.cbuild.yml  text_angle_classification.uvprojx  text_recognition+ENPPOCRV3RECM55.cbuild.yml  text_recognition+ENPPOCRV3RECM55.cprj  text_recognition+ENPPOCRV3RECM85.cbuild.yml  text_recognition+ENPPOCRV3RECM85.cprj  text_recognition.cbuild-idx.yml  text_recognition.cproject.yml  text_recognition.csolution.yml  (+2 more)
scripts/: README.md  config.sh  config_cmsis.sh  config_cmsis_toolbox.sh  config_ethos-u-core-platform.sh  config_gcc-arm-none-eabi.sh  config_python.sh  config_tvm.sh
(+76 files in other folders)
